Addressed code review feedback, added serialization unit tests
