# internal/pkg/api/schema.go
@@ -136,17 +136,25 @@ func (a *AckResponse) SetError(pos int, err error) {
 	}
 }
 
+type ActionRespSigned struct {
+	// The base64 encoded, UTF-8 JSON serialized action bytes that are signed.
+	Data string `json:"data,omitempty"`
+
+	// The base64 encoded signature.
+	Signature string `json:"signature,omitempty"`
+}
+
 type ActionResp struct {
-	AgentID    string          `json:"agent_id"`
-	CreatedAt  string          `json:"created_at"`
-	StartTime  string          `json:"start_time,omitempty"`
-	Expiration string          `json:"expiration,omitempty"`
-	Data       interface{}     `json:"data"`
-	ID         string          `json:"id"`
-	Type       string          `json:"type"`
-	InputType  string          `json:"input_type"`
-	Timeout    int64           `json:"timeout,omitempty"`
-	Signed     json.RawMessage `json:"signed,omitempty"`
+	AgentID    string            `json:"agent_id"`
+	CreatedAt  string            `json:"created_at"`
+	StartTime  string            `json:"start_time,omitempty"`
+	Expiration string            `json:"expiration,omitempty"`
+	Data       interface{}       `json:"data"`
+	ID         string            `json:"id"`
+	Type       string            `json:"type"`
+	InputType  string            `json:"input_type"`
+	Timeout    int64             `json:"timeout,omitempty"`
+	Signed     *ActionRespSigned `json:"signed,omitempty"`
 }
 
 type Event struct {
